docs/apache-airflow-providers-amazon/8.24.0/_sources/_api/airflow/providers/amazon/aws/triggers/comprehend/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.triggers.comprehend`
==========================================================

.. py:module:: airflow.providers.amazon.aws.triggers.comprehend


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.comprehend.ComprehendPiiEntitiesDetectionJobCompletedTrigger




.. py:class:: ComprehendPiiEntitiesDetectionJobCompletedTrigger(*, job_id, waiter_delay = 120, waiter_max_attempts = 75, aws_conn_id = 'aws_default')


   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`

   Trigger when a Comprehend pii entities detection job is complete.

   :param job_id: The id of the Comprehend pii entities detection job.
   :param waiter_delay: The amount of time in seconds to wait between attempts. (default: 120)
   :param waiter_max_attempts: The maximum number of attempts to be made. (default: 75)
   :param aws_conn_id: The Airflow connection used for AWS credentials.

   .. py:method:: hook()

      Override in subclasses to return the right hook.



